--- a/client/kode/package.json
+++ b/client/kode/package.json
@@ -2,6 +2,7 @@
   "name": "yal",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -11,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-file-base64": "^1.0.3",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
