--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,27 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Marija Vuco",
+  "license": "ISC",
+  "description": "Website with tutorials suggestions",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mvuco00/KODE.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mvuco00/KODE/issues"
+  },
+  "homepage": "https://github.com/mvuco00/KODE#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.17"
+  }
 }
