--- a/client/kode/package.json
+++ b/client/kode/package.json
@@ -45,6 +45,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "jwt-decode": "^3.1.2",
     "mini-css-extract-plugin": "0.11.3",
     "moment": "^2.29.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -60,6 +61,7 @@
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
     "react-file-base64": "^1.0.3",
+    "react-google-login": "^5.2.2",
     "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
